--- a/game_blog/templates/blog/xo.html
+++ b/game_blog/templates/blog/xo.html
@@ -1,10 +1,11 @@
 {% extends "blog/general.html" %}
 {% block content %}
-        <p id="tour"></p>
+        <div id="info">
+            <div class="jo">X player: hu</div>
+            <p id="tour"></p>
+            <div class="jo" style="color: blue;">O player: hi</div>
+        </div>
         
-        <div class="jo1">X player: hu</div>
-        <div class="jo2">O player: hi</div>
-
         <div class="cadre_xo">
             <div id="gene-cadre">
                 <div data-index="1" class="min-cadre"></div>
