--- a/game_blog/templates/blog/xo.html
+++ b/game_blog/templates/blog/xo.html
@@ -23,7 +23,7 @@
         
         <div id="partie_de_botton">
             <button id="new_geme" onclick="newgame()">New game</button>
-            <button id="log_out" onclick="location='/'">log out</button>
+            <button id="log_out" onclick="location='/logout/'">log out</button>
         </div>
 
         
