--- a/game_blog/templates/blog/xo.html
+++ b/game_blog/templates/blog/xo.html
@@ -1,9 +1,9 @@
 {% extends "blog/general.html" %}
 {% block content %}
         <div id="info">
-            <div class="jo">X player: hu</div>
+            <div class="jo">X player: {{play1}}</div>
             <p id="tour"></p>
-            <div class="jo" style="color: blue;">O player: hi</div>
+            <div class="jo" style="color: blue;">O player: {{play2}}</div>
         </div>
         
         <div class="cadre_xo">
